[tool.poetry]
name = "writedown2022"
version = "1.4.0"
description = "简书 2022「落格计划」"
authors = ["yezi <yehaowei20060411@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
backoff = "^2.2.1"
jianshuresearchtools = "^2.10.1"
pyecharts = "^2.0.0"
jieba = "^0.42.1"
pymongo = "^4.3.3"
pywebio = "^1.7.1"
pyyaml = "^6.0"
sspeedup = {version = "^0.9.0", extras = ["logging", "pywebio", "ability-word-split"]}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.241"
pyright = "^1.1.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

select = ["A", "ANN", "B", "C", "E", "F", "I", "N", "RET", "S", "SIM", "UP", "W"]

ignore = ["ANN101", "ANN102", "ANN401", "C901", "E501", "S104"]

target-version = "py38"