[tool.poetry]
name = "writedown2022"
version = "1.4.0"
description = "简书 2022「落格计划」"
authors = ["yezi <yehaowei20060411@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jianshuresearchtools = "^2.11.0"
pyecharts = "^2.0.0"
pymongo = "^4.3.3"
pywebio = "^1.8.2"
pyyaml = "^6.0"
sspeedup = {version = "^0.10.0", extras = ["logging", "pywebio", "ability-word-split"]}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.262"
pyright = "^1.1.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

select = ["A", "ANN", "B", "C", "E", "F", "I", "N", "RET", "S", "SIM", "UP", "W"]

ignore = ["ANN101", "ANN102", "ANN401", "C901", "E501", "S104"]

target-version = "py38"